2001-05-29  Derek Price  <dprice@collab.net>

	* cvs.texinfo (Repository): Fix explanation of CVSROOT parsing
	algorithm.

2001-05-29  Derek Price  <dprice@collab.net>
	patch from Pavel Roskin  <proski@gnu.org>

	* Makefile.am (CVSvn.texi): Double hash comment in rule since single
	hash comments are not portable.

	* Makefile.in: Regenerated.

2001-05-21  Larry Jones  <larry.jones@sdrc.com>

	* cvs.texinfo (Error messages): Fix ordering; add "cannot commit
	files as root".

	* cvs.texinfo (Invoking CVS): Add entries for kserver, pserver,
	rannotate, rlog, and server.

	* cvs.texinfo: Lots of minor editorial corrections.  Mostly adding
	@noindent after examples where the following text is intended to
	be a continuation of the preceding text, not a new paragraph.

	* cvs.texinfo (Connection): Replace information about unsetting
	$HOME for people with old releases.


	* cvs.texinfo (Connecting via rsh): Use @samp{} instead of @file{}
	where it seemed appropriate.
	(Patch from Alexey Mahotkin <alexm@hsys.msk.ru>).

2001-05-18  Larry Jones  <larry.jones@sdrc.com>

	* cvs.texinfo (Password authentication server): Add xinetd info.
	(Connection): Add "broken pipe" to possible error messages.

2001-05-18  Derek Price  <dprice@collab.net>

	* cvs.texinfo (update output): Change wording to something that sounds
	a bit more like english.

2001-05-02  Derek Price  <dprice@collab.net>

	* cvs.texinfo (Top): Change @ifinfo to @ifnottex to placate HTML
	generators.

2001-04-27  Derek Price  <dprice@collab.net>

	* CVSvn.texi: Regenerated.

2001-04-27  Derek Price  <dprice@collab.net>

	* CVSvn.texi: Regenerated.

2001-04-25  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated using AM 1.4e as of today at 18:10 -0400.
	* CVSvn.texi: Regenerated.

2001-03-30  Larry Jones  <larry.jones@sdrc.com>

	* cvsclient.texi (Dates, Requests): Add rannotate and rlog.

2001-03-26  Larry Jones  <larry.jones@sdrc.com>
