@@ -1,3 +1,10 @@
+2001-06-04  Larry Jones  <larry.jones@sdrc.com>
+
+	* Makefile.am: Fix rules for cvs-paper (.pdf rule actually generated
+	.ps and vice versa).
+	(Reported by Alexey Mahotkin <alexm@hsys.msk.ru>.)
+	* Makefile.in: Regenerated.
+
 2001-05-29  Derek Price  <dprice@collab.net>
 
 	* cvs.texinfo (Repository): Fix explanation of CVSROOT parsing
